--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Kotlin generated
 *.iml
 .kotlin
 .gradle
@@ -17,3 +18,5 @@ captures
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
 node_modules/
+# Others
+utils/**/*.db
